ConfirmDialog.coffee fix switch overlapping

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -7,6 +7,7 @@
     padding: 5px
     margin: 15px 0
     vertical-align: top
+    z-index: 0
 
     &[disabled]
         opacity: 0.8
@@ -133,3 +134,10 @@
                 background-color: #d9534f
                 border-color: #d43f3a
                 color: #fff
+
+.mdl-dialog
+    width: fit-content
+
+    > h1, h2, h3, h4, h5, h6
+        margin-top: 15px
+        margin-bottom: 0
